# EvalMetricBot

./: .gitignore  README.md  pyproject.toml
bot_evaluator/: __init__.py  eval_report.py  evaluator.py  metrics.py  models.py
data/eval_sets/: sample_eval.json
examples/: usage_example.py
