[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bot_evaluator"
version = "0.1.0"
description = "A framework-agnostic, production-ready tool to evaluate conversational AI systems."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Bot Evaluator Team" }
]
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "sentence-transformers>=2.2",
    "requests>=2.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
rag = ["ragas"]
sql = ["sqlglot"]
llm = ["openai", "anthropic", "google-generativeai", "langchain"]
all = ["ragas", "sqlglot", "openai", "anthropic", "google-generativeai", "langchain"]
dev = [
    "pytest",
    "pytest-cov"
]
